Get decent calibration running for Hong Kong SARS data

--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -15,8 +15,9 @@
     "from jax import jit, random\n",
     "import arviz as az\n",
     "from estival.sampling import tools as esamp\n",
+    "from plotly.express.colors import qualitative as qual_colours\n",
     "\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti\n",
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches\n",
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
@@ -43,7 +44,7 @@
    "outputs": [],
    "source": [
     "country_req = \"Hong Kong SAR, China\"\n",
-    "case_data = sars_data[sars_data[\"Country\"] == country_req][\"Cumulative number of case(s)\"].diff().dropna()"
+    "case_data = sars_data[sars_data[\"Country\"] == country_req][\"Cumulative number of case(s)\"].diff().rolling(7).mean().dropna()"
    ]
   },
   {
@@ -95,7 +96,7 @@
     "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
     "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
-    "    \"seed\": dist.Uniform(1.0, 6.0),\n",
+    "    \"seed\": dist.Uniform(0.4, 1.5),\n",
     "}"
    ]
   },
@@ -159,13 +160,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spaghetti(spaghetti, select_data)"
+    "plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_spaghetti(spaghetti, select_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
