Restrict generation time ranges

--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "country_req = \"Hong Kong SAR, China\"\n",
-    "case_data = sars_data[sars_data[\"Country\"] == country_req][\"Cumulative number of case(s)\"].diff().rolling(7).mean().dropna()"
+    "case_data = sars_data[sars_data[\"Country\"] == country_req][\"Cumulative number of case(s)\"].diff().rolling(4).mean().dropna()"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "source": [
     "# Specify fixed parameters and get calibration data\n",
     "run_in = 10\n",
-    "proc_update_freq = 5\n",
+    "proc_update_freq = 4\n",
     "pop = 6.7e6\n",
     "analysis_start = sars_data.index[0]\n",
     "analysis_end = datetime(2003, 5, 1)\n",
@@ -93,8 +93,8 @@
    "source": [
     "# Define parameter ranges\n",
     "priors = {\n",
-    "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
-    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
+    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
+    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
     "    \"seed\": dist.Uniform(0.4, 1.5),\n",
     "}"
@@ -107,10 +107,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
-    "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
-    "rng_key = random.PRNGKey(1)\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
+    "# Convenience function for PDF of a prior\n",
+    "import numpy as np\n",
+    "def plotpdf(p):\n",
+    "    x = np.linspace(p.icdf(0.001), p.icdf(0.999), 100)\n",
+    "    return pd.Series(data=np.exp(p.log_prob(x)), index=x)\n",
+    "\n",
+    "plotpdf(priors[\"seed\"]).plot()"
    ]
   },
   {
@@ -120,13 +123,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idata = az.from_numpyro(mcmc)"
+    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
+    "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
+    "rng_key = random.PRNGKey(1)\n",
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idata = az.from_numpyro(mcmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
