--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -16,6 +16,7 @@
     "import arviz as az\n",
     "from estival.sampling import tools as esamp\n",
     "from plotly.express.colors import qualitative as qual_colours\n",
+    "from IPython.display import Markdown\n",
     "\n",
     "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches\n",
     "from emu_renewal.process import CosineMultiCurve\n",
@@ -107,22 +108,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convenience function for PDF of a prior\n",
-    "import numpy as np\n",
-    "def plotpdf(p):\n",
-    "    x = np.linspace(p.icdf(0.001), p.icdf(0.999), 100)\n",
-    "    return pd.Series(data=np.exp(p.log_prob(x)), index=x)\n",
-    "\n",
-    "plotpdf(priors[\"seed\"]).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
@@ -132,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
