--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -22,7 +22,8 @@
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.calibration import StandardCalib"
+    "from emu_renewal.calibration import StandardCalib\n",
+    "from emu_renewal.utils import get_adjust_idata_index"
    ]
   },
   {
@@ -181,7 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "az.summary(idata)"
+    "summary = az.summary(idata)\n",
+    "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
+    "Markdown(summary.to_markdown())"
    ]
   }
  ],
