Finish formatting for arviz summary

--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -23,7 +23,7 @@
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.calibration import StandardCalib\n",
-    "from emu_renewal.utils import get_adjust_idata_index"
+    "from emu_renewal.utils import get_adjust_idata_index, adjust_summary_cols"
    ]
   },
   {
@@ -183,6 +183,7 @@
    "outputs": [],
    "source": [
     "summary = az.summary(idata)\n",
+    "summary = adjust_summary_cols(summary)\n",
     "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
     "Markdown(summary.to_markdown())"
    ]
