Load Hong Kong data from URL instead of local

--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sars_data = pd.read_csv(\"../data/sars_hongkong/sars_2003_complete_dataset_clean.csv\", index_col=\"Date\", parse_dates=True)\n",
+    "sars_data = pd.read_csv(\"https://github.com/monash-emu/wpro-working/raw/more-datasets/data/sars_hongkong/sars_2003_complete_dataset_clean.csv\", index_col=\"Date\", parse_dates=True)\n",
     "# print(\"Available countries are:\")\n",
     "# set(sars_data[\"Country\"])"
    ]
