Resolve bug with documentation crashing notebook 02

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -109,17 +109,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "x_vals = np.linspace(0.0, 20.0, 100)\n",
-    "pd.Series(np.diff(priors[\"seed\"].cdf(x_vals)), index=x_vals[:-1]).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
@@ -278,6 +267,7 @@
    "outputs": [],
    "source": [
     "# First attempt at prior-posterior comparison graph\n",
+    "import numpy as np\n",
     "vars = list(priors.keys())\n",
     "comparison_plot = az.plot_density(idata, var_names=list(priors.keys()), point_estimate=None, shade=0.5);\n",
     "for i_ax, ax in enumerate(comparison_plot.ravel()[:len(vars)]):\n",
@@ -286,6 +276,20 @@
     "    y_vals = np.diff(priors[vars[i_ax]].cdf(x_vals))\n",
     "    y_vals *= 0.94 / max(y_vals)\n",
     "    ax.fill_between(x_vals[:-1], y_vals, color='k', alpha=0.2, linewidth=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convenience function for PDF of a prior\n",
+    "def plotpdf(p):\n",
+    "    x = np.linspace(p.icdf(0.001), p.icdf(0.999), 100)\n",
+    "    return pd.Series(data=np.exp(p.log_prob(x)), index=x)\n",
+    "\n",
+    "plotpdf(priors[\"cdr\"]).plot()"
    ]
   }
  ],
