--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the line below to install on Colab or similar\n",
-    "#! pip install git+https://github.com/monash-emu/wpro-working.git@pyproject"
+    "#! pip install git+https://github.com/monash-emu/wpro-working.git@more-datasets"
    ]
   },
   {
