Use function that tidies up arviz table information

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -49,7 +49,8 @@
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES, plot_3d_spaghetti\n",
-    "from emu_renewal.calibration import StandardCalib"
+    "from emu_renewal.calibration import StandardCalib\n",
+    "from emu_renewal.utils import get_adjust_idata_index, adjust_summary_cols"
    ]
   },
   {
@@ -122,15 +123,6 @@
    "outputs": [],
    "source": [
     "idata = az.from_numpyro(mcmc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "az.summary(idata)"
    ]
   },
   {
@@ -258,6 +250,18 @@
    "outputs": [],
    "source": [
     "# plot_3d_spaghetti(spaghetti, [\"susceptibles\", \"transmission potential\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = az.summary(idata)\n",
+    "summary = adjust_summary_cols(summary)\n",
+    "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
+    "Markdown(summary.to_markdown())"
    ]
   },
   {
