Get notebook 02 rendering nicely with quarto

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -10,6 +10,7 @@
     "  pdf\n",
     "execute:\n",
     "  echo: false\n",
+    "  warning: false\n",
     "jupyter: python3\n",
     "bibliography: renew.bib\n",
     "csl: https://www.zotero.org/styles/the-lancet\n",
@@ -32,7 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| warning: false\n",
     "from jax import jit, random\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
@@ -110,6 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| output: false\n",
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
@@ -168,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spaghetti(spaghetti, select_data)"
+    "#| output: false\n",
+    "plot_spaghetti(spaghetti, select_data).update_layout(showlegend=False)"
    ]
   },
   {
@@ -178,7 +180,7 @@
    "outputs": [],
    "source": [
     "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
-    "patch_fig"
+    "patch_fig.update_layout(showlegend=False)"
    ]
   },
   {
