Update posterior comparison plotting

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -48,7 +48,8 @@
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES, plot_3d_spaghetti\n",
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti\n",
+    "from emu_renewal.outputs import plot_uncertainty_patches, PANEL_SUBTITLES, plot_3d_spaghetti, plot_post_prior_comparison\n",
     "from emu_renewal.calibration import StandardCalib\n",
     "from emu_renewal.utils import get_adjust_idata_index, adjust_summary_cols"
    ]
@@ -272,30 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First attempt at prior-posterior comparison graph\n",
-    "import numpy as np\n",
-    "vars = list(priors.keys())\n",
-    "comparison_plot = az.plot_density(idata, var_names=list(priors.keys()), point_estimate=None, shade=0.5);\n",
-    "for i_ax, ax in enumerate(comparison_plot.ravel()[:len(vars)]):\n",
-    "    ax_limits = ax.get_xlim()\n",
-    "    x_vals = np.linspace(ax_limits[0], ax_limits[1], 100)\n",
-    "    y_vals = np.diff(priors[vars[i_ax]].cdf(x_vals))\n",
-    "    y_vals *= 0.94 / max(y_vals)\n",
-    "    ax.fill_between(x_vals[:-1], y_vals, color='k', alpha=0.2, linewidth=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convenience function for PDF of a prior\n",
-    "def plotpdf(p):\n",
-    "    x = np.linspace(p.icdf(0.001), p.icdf(0.999), 100)\n",
-    "    return pd.Series(data=np.exp(p.log_prob(x)), index=x)\n",
-    "\n",
-    "plotpdf(priors[\"cdr\"]).plot()"
+    "plot_post_prior_comparison(idata, list(priors.keys()), priors);"
    ]
   }
  ],
