--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "from jax import jit, random\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
     "from numpyro import infer\n",
@@ -61,14 +61,17 @@
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 30\n",
     "proc_update_freq = 14\n",
+    "init_time = 50\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
     "analysis_start = datetime(2021, 3, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
-    "select_data = mys_data.loc[analysis_start: analysis_end]"
+    "init_start = analysis_start - timedelta(init_time)\n",
+    "init_end = analysis_start - timedelta(1)\n",
+    "select_data = mys_data.loc[analysis_start: analysis_end]\n",
+    "init_data = mys_data.loc[init_start: init_end]"
    ]
   },
   {
@@ -77,8 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_fitter = seed_fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, proc_fitter, GammaDens(), seed_fitter, 50)"
+    "proc_fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, proc_fitter, GammaDens(), 50, init_data)"
    ]
   },
   {
@@ -87,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, mys_data)"
+    "calib = StandardCalib(renew_model, select_data, init_data)"
    ]
   },
   {
@@ -101,7 +104,6 @@
     "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
     "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
-    "    \"seed\": dist.Uniform(3.0, 10.0),\n",
     "}"
    ]
   },
@@ -147,8 +149,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
+    "from jax import numpy as jnp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_full_result(gen_mean, gen_sd, proc, cdr):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
