--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -101,9 +101,10 @@
    "source": [
     "# Define parameter ranges\n",
     "priors = {\n",
-    "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
-    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
+    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
+    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
+    "    \"rt_init\": dist.Normal(0.0,0.25),\n",
     "}"
    ]
   },
@@ -158,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
