Add numpyro leak fix

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -90,7 +90,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data, init_data)"
+    "# Define parameter ranges\n",
+    "priors = {\n",
+    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
+    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
+    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
+    "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
+    "}"
    ]
   },
   {
@@ -99,13 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define parameter ranges\n",
-    "priors = {\n",
-    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
-    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
-    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
-    "    \"rt_init\": dist.Normal(0.0,0.25),\n",
-    "}"
+    "calib = StandardCalib(renew_model, priors, select_data, init_data)"
    ]
   },
   {
