Remove references to init_series from calibration

--- a/notebooks/02-covid-malaysia.ipynb
+++ b/notebooks/02-covid-malaysia.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, priors, select_data, init_data)"
+    "calib = StandardCalib(renew_model, priors, select_data)"
    ]
   },
   {
