Get notebook 03 working, but analysis not making sense yet

--- a/notebooks/03-sars-hongkong.ipynb
+++ b/notebooks/03-sars-hongkong.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6118441a",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from datetime import datetime\n",
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +64,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 10\n",
+    "window_len = 50\n",
     "proc_update_freq = 4\n",
     "pop = 6.7e6\n",
     "analysis_start = sars_data.index[0]\n",
@@ -79,22 +80,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data)"
+    "init_series"
    ]
   },
   {
@@ -104,19 +94,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define parameter ranges\n",
-    "priors = {\n",
-    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
-    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
-    "    \"cdr\": dist.Beta(10.0, 4.0),\n",
-    "    \"seed\": dist.Uniform(0.4, 1.5),\n",
-    "}"
+    "# Create exponentially increasing case counts for init_duration period before analysis starts\n",
+    "# Pad with zeroes to allow looking back over the full window\n",
+    "init_duration = 14\n",
+    "exp_coeff = np.log(case_data.iloc[0]) / init_duration\n",
+    "init_series = np.concatenate([np.zeros(window_len - init_duration), np.exp(exp_coeff * np.arange(init_duration))])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), window_len, init_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameter ranges\n",
+    "priors = {\n",
+    "    \"gen_mean\": dist.Uniform(6.5, 10.5),\n",
+    "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
+    "    \"cdr\": dist.Beta(10.0, 4.0),\n",
+    "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib = StandardCalib(renew_model, priors, select_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +179,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
@@ -169,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
