Sort out length of initialisation sequence behind the scenes

--- a/notebooks/03-sars-hongkong.ipynb
+++ b/notebooks/03-sars-hongkong.ipynb
@@ -88,7 +88,7 @@
     "# Pad with zeroes to allow looking back over the full window\n",
     "init_duration = 14\n",
     "exp_coeff = np.log(case_data.iloc[0]) / init_duration\n",
-    "init_series = np.concatenate([np.zeros(window_len - init_duration), np.exp(exp_coeff * np.arange(init_duration))])"
+    "init_series = np.exp(exp_coeff * np.arange(init_duration))"
    ]
   },
   {
@@ -213,6 +213,14 @@
     "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
     "Markdown(summary.to_markdown())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
