Get all notebooks integrated with new code structure

--- a/notebooks/03-covid-malaysia.ipynb
+++ b/notebooks/03-covid-malaysia.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "proc_fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, proc_fitter, GammaDens(), 50, init_data)"
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, proc_fitter, GammaDens(), 50, init_data, GammaDens())"
    ]
   },
   {
@@ -96,6 +96,8 @@
     "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
     "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
+    "    \"report_mean\": dist.Uniform(8.0, 12.0),\n",
+    "    \"report_sd\": dist.Uniform(3.0, 6.0),\n",
     "}"
    ]
   },
@@ -150,17 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax import numpy as jnp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
