--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), window_len, init_series)"
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), window_len, init_series, GammaDens())"
    ]
   },
   {
@@ -115,6 +115,8 @@
     "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
     "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
+    "    \"report_mean\": dist.Uniform(8.0, 12.0),\n",
+    "    \"report_sd\": dist.Uniform(3.0, 6.0),\n",
     "}"
    ]
   },
@@ -173,8 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
@@ -188,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)"
+    "pd.Series(init_series).plot()"
    ]
   },
   {
@@ -198,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spaghetti(spaghetti, select_data)"
+    "plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)"
    ]
   },
   {
@@ -208,10 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary = az.summary(idata)\n",
-    "summary = adjust_summary_cols(summary)\n",
-    "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
-    "Markdown(summary.to_markdown())"
+    "plot_spaghetti(spaghetti, select_data)"
    ]
   },
   {
@@ -220,7 +219,12 @@
    "id": "16",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "summary = az.summary(idata)\n",
+    "summary = adjust_summary_cols(summary)\n",
+    "summary.index = summary.index.map(get_adjust_idata_index(renew_model))\n",
+    "Markdown(summary.to_markdown())"
+   ]
   }
  ],
  "metadata": {
