Allow for non-calibrated parameters

--- a/notebooks/03-covid-malaysia.ipynb
+++ b/notebooks/03-covid-malaysia.ipynb
@@ -120,7 +120,7 @@
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), priors=priors)"
    ]
   },
   {
