--- a/notebooks/04-sars-hongkong.ipynb
+++ b/notebooks/04-sars-hongkong.ipynb
@@ -115,8 +115,10 @@
     "    \"gen_sd\": dist.Uniform(3.0, 4.6),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
     "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
-    "    \"report_mean\": dist.Uniform(8.0, 12.0),\n",
-    "    \"report_sd\": dist.Uniform(3.0, 6.0),\n",
+    "}\n",
+    "fixed_params = {\n",
+    "    \"report_mean\": 10.0,\n",
+    "    \"report_sd\": 5.0\n",
     "}"
    ]
   },
@@ -127,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, priors, select_data)"
+    "calib = StandardCalib(renew_model, priors, select_data, fixed_params)"
    ]
   },
   {
@@ -140,7 +142,7 @@
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), priors=priors)"
    ]
   },
   {
@@ -175,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init, fixed_params[\"report_mean\"], fixed_params[\"report_sd\"])\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
